<resources>
    <string name="app_name">Decompress2</string>

    <string name="hello">cjyong</string>
    <string name="welcome">Ticket查票软件</string>
    <string name="user_name">用户名:</string>
    <string name="user_pass">用户密码:</string>
    <string name="login">登录</string>
    <string name="cancel">取消</string>
    <string name="logout">登出</string>
    <string name="forceLogout">强制下线</string>
    <string name="help">帮助</string>
    <string name="title_activity_ticket_assistant">TicketAssistant</string>
</resources>
