<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.exmper.administrator.decompress2.NetworkLoginActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:src="@drawable/main"
        android:contentDescription="@string/hello"
        />
    <TextView
        android:text="@string/welcome"
        android:id="@+id/TextView"
        android:textSize="@dimen/label_font_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/title_padding"
        />
    <TableRow>
        <TextView android:text="@string/user_name"
            android:textSize="@dimen/label_font_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <EditText android:id="@+id/userEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/user_pass"
            android:textSize="@dimen/label_font_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <EditText android:id="@+id/pwdEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </TableRow>
    <!-- 定义登录，取消的按钮行-->
    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
        <Button
            android:id="@+id/bnLogin"
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/bnCancel"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
        <Button
            android:id="@+id/bnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:elevation="14dp" />
        <Button
            android:id="@+id/bnForceLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forceLogout"
            />
    </LinearLayout>
    <TableRow>

        <Button android:id="@+id/bnHelp"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:textSize="15dip"
            />
    </TableRow>
</TableLayout>